@@ -1,6 +1,9 @@
 uuagc (0.9.42.2-2) UNRELEASED; urgency=low
 
   * Last upload was not fully merged before, fixing this
+  * Stop using the installed uuagc and use the included pre-generated files,
+    as building fails otherwise:
+    http://lists.debian.org/debian-haskell/2013/02/msg00026.html
 
  -- Joachim Breitner <nomeata@debian.org>  Sat, 09 Feb 2013 13:27:08 +0100
 
